fix the nav redirect out of viewport problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
 body {
-  margin: 0;
+    margin: 0;
+}
+
+section:before {
+    content: '';
+    display: block;
+    height: 50px;
+    margin: -30px 0 0;
 }
